--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,5 +1,5 @@
 name: '🐛 Bug report'
-description: Create a report to help us improve
+description: Report a reproducible bug or regression
 body:
   - type: markdown
     attributes:
